# modeling

./: .gitignore  README.md  hf_train.py  requirements.txt  setup.cfg  setup.py  train.py
src/modeling/: arguments.py  callbacks.py  collators.py  data.py  peft_training.py
src/modeling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
