[metadata]
name = modeling
description = My modeling repository
long_descrition = file: README.modeling
long_description_content_type = text/markdown
url = https://github.com/jrhoff/modeling.git

classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

package_dir = src
packages = find:
python_requires = >=3.8

[options]
install_requires =
    transformers
    lightning  
    peft
    datasets
    lightning
    pyyaml

[options.packages.find]
where = src
